--- a/practice.yaml
+++ b/practice.yaml
@@ -69,36 +69,30 @@
 
 # 01/03/26 Practice
 
-# - name: variables from prompt
-#   hosts: local
-#   connection: local
-#   vars_prompt: # this is syntax
-#   - name: username
-#     prompt: What is your username?
-#     private: true # false ani vunte enter chestunte name visible avuthundhi..... True vunte after excute it will be visible...
-#   - name: password # so here will get error  see in notes
-#     prompt: what is your password
-#     private: true # so here false ani vunte enter chesetappudu visible avuthundhi, adhe true ani vunte wont visible
-#   tasks: 
-#   - name: print credentials
-#     ansible.builtin.debug:
-#       msg: "Hello, Username is: {{ username }} Password is: {{ password }}"
 
 
 
-- name: pwd
+
+
+- name: data types
   hosts: local
   connection: local
-  vars_prompt:
-  - name: username
-    prompt: what is ur name
-    private: false
-
-
-
-
-
-
+  concepts:
+    Course: "DevOps with AWS" # string
+    Duration: 120 # number
+    is_live: true # boolean
+    # list
+    tools: # ["linux", "shell", "ansible"] ila ayina pettachu or else like as below 
+    - "linux"
+    - shell
+    - ansible # so ikkada (-) iphen tho start ithe adhi list 
+    concepts: # dictionary or map so here below not start with - so we called as map or disctinory
+      cloud: aws
+      cm: ansible
+  tasks:
+  - name: print course info
+    ansible.builtin.debug: # this the module for excute
+      msg: "Course name: {{ Course }}, Duration: {{ Duration }}, is it live?: {{ is_live }}, tools are: {{ tools }} concepts are: {{ concepts }}"
 
 
 
