--- a/18-2-string-to-list.yaml
+++ b/18-2-string-to-list.yaml
@@ -23,4 +23,4 @@
 #   tasks:
 #   - name: string ot list
 #     ansible.builtin.debug:
-#       msg: " URL name is {{name | split('/') , sss | split(',') , rrr | split('8')}} "
+#       msg: " URL name is : {{ name | split ('/') , sss | split (',') , rrr | split ('8') }} "
