--- a/practice.yaml
+++ b/practice.yaml
@@ -79,7 +79,7 @@
   tasks:
   - name: string ot list
     ansible.builtin.debug:
-      msg: " URL is : {{ nnn | split ('/') , sss | split (',') , rrr | split ('8') }} "
+      msg: " URL is : {{ nnn | split ('/') }}"
 
 
 
