--- a/practice.yaml
+++ b/practice.yaml
@@ -77,7 +77,9 @@
   - name: checks
     ansible.builtin.shell: cat /etc/passwd | grep root
     register: ss_op
-
+  - name: check op
+    ansible.builtin.debug:
+      msg: " op is: {{ss_op}}"
 
 
 
