--- a/practice.yaml
+++ b/practice.yaml
@@ -80,7 +80,7 @@
       name: nginx
       state: present
   - name: serice
-    ansible.builtin.debug:
+    ansible.builtin.service:
       name: nginx
       state: started
       enabled: yes
